test/compare/testdata/fixedbugs/issue550.go
// errorcheck

package main

func f() {}

func main() {
	(	// ERROR `syntax error: unexpected newline, expecting )`
		f()
}
